--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.0.0",
     "@prisma/client": "^5.21.1",
     "next": "14.2.15",
     "react": "^18",
